# jira-notion-chatbot

./: .gitignore  app.py  ingest.py  main.py  pyproject.toml  test_db.py  test_notion.py
